# diff-eq-solver

./: .gitignore  .gitpod.yml  CNAME  Dockerfile  LICENSE  Main.py  README.md  app.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_FirstOrderODE.py  test_HeatEquation.py  test_SecondOrderODE.py  test_WaveEquation.py  text_WaveEquation.py  tox.ini
.github/workflows/: python-package.yml  tests.yml
backend/: differential_equation.py  first_order_ode.py  heat_equation_1d.py  second_order_ode.py  wave_equation_1d.py
data/: first_order_ode.xlsx  second_order_ode.xlsx
docs/: conf.py  diffeq_solver_tk.forms.html  diffeq_solver_tk.html  diffeq_solver_tk.messages.html  diffeq_solver_tk.messages.rst  diffeq_solver_tk.rst  diffeq_solver_tk.services.html  genindex.html  index.html  modules.html  modules.rst  py-modindex.html  search.html  searchindex.js
docs/_sources/: diffeq_solver_tk.services.rst.txt
excel_data/: FirstOrderODESolution.xlsx  HeatEqSolution.xlsx  ODE.xlsx  PDE.xlsx  SecondOrderODESolution.xlsx  WaveEqSolution.xlsx
exception/: BoundaryTypeException.py
frontend/: first_order_ode_page.py  heat_equation_page.py  mainview.py  page.py  second_order_ode_page.py  wave_equation_page.py
model/: FirstOrderODE.py  HeatEquation.py  ODE.py  ODESystem.py  PDE.py  SecondOrderODE.py  WaveEquation.py  first_order_ode.py  heat_equation.py  ode.py  ode_system.py  pde.py  second_order_ode.py  wave_equation.py
output/: FirstOrderODESolution.xlsx  HeatEqSolution.xlsx  ODESystem.xlsx  SecondOrderODESolution.xlsx  WaveEqSolution.xlsx  heat_equation_solution.xlsx  ode_system_solution.xlsx  wave_equation_solution.xlsx
outputs/: first_order_ode.xlsx  heat_eq_1d.xlsx  heat_equation_1d.xlsx  second_order_ode.xlsx  wave_equation_1d.xlsx
src/: differential_equation.py  differential_equation_form.py  differential_equation_messages.py  differential_equation_metadata.py  differential_equation_service.py  equation_form_builder.py  main_view.py  tkinter_config.py
src/data/: FirstOrderODE.xlsx  HeatEquation.xlsx  ODE.xlsx  SecondOrderODE.xlsx
src/diffeq_solver_tk/: __init__.py  __main__.py  cli.py  conversion.py  differential_equation_metadata.py  differential_equation_service.py  excel_export.py  finite_difference.py  main_view.py  util.py
src/first_order_ode/: first_order_ode.py  first_order_ode_form.py  first_order_ode_messages.py  first_order_ode_service.py
src/forms/: differential_equation_form.py  equation_form_builder.py  first_order_ode_form.py  heat_equation_form.py  second_order_ode_form.py  wave_equation_form.py
src/heat_equation/: heat_equation.py  heat_equation_form.py  (+2 more)
test/: differential_equation_test.py  test_differential_equation.py  test_first_order_ode.py  test_heat_equation.py  test_second_order_ode.py  test_wave_equation.py
tests/: test_services.py  test_solver.py
ui/: FirstOrderODEPage.py  HeatEquationPage.py  MainView.py  ODESystemPage.py  Page.py  SecondOrderODEPage.py  WaveEquationPage.py  first_order_ode_page.py  heat_equation_page.py  mainview.py  ode_system_page.py  second_order_ode_page.py  wave_equation_page.py
(+99 files in other folders)
