[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "diffeq_solver_tk"
version = "0.0.8"
dependencies = [
    "matplotlib==3.8.0",
    "openpyxl==3.1.2",
    "numpy==1.26.4",
]

[project.gui-scripts]
detk = "diffeq_solver_tk.__main__:main"

[project.scripts]
detk-cli = "diffeq_solver_tk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["diffeq_solver_tk*"]
