[metadata]
name = diffeq_solver_tk
version=0.0.5
description = tkinter application for solving differential equation
long_description = file: README.md
long_description_content_type = text/markdown
author = Joey Shi
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
diffeq_solver_tk = py.typed

[options.entry_points]
console_scripts =
        detk = diffeq_solver_tk.__main__:main

[flake8]
max-line-length = 160