[metadata]
name = diffeq_solver_tk
version = attr: diffeq_solver_tk.__version__
description = Tkinter application for solving differential equations.
long_description = file: README.md
long_description_content_type = text/markdown
author = Joey Shi
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
python_requires = >= 3.10
package_dir =
    =src
install_requires =
    matplotlib
    openpyxl
    numpy

[options.packages.find]
where=src

[options.entry_points]
gui_scripts = 
    detk = diffeq_solver_tk.__main__:main
console_scripts =
    detk-cli = diffeq_solver_tk.cli:main
